# tech

./: .nojekyll  CNAME  README.md  _quarto.yml  index.html  index.xml  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
posts/: _metadata.yml
posts/access-axes-in-plotnine/: 20250411.html  20250411.qmd
posts/casewhen-in-polars/: 20250525.html  20250525.qmd
posts/clone-reciprocal-tariffs-table/: 20250403.html  20250403.qmd
posts/clone-reciprocal-tariffs-table-p9/: 20250416.html  20250416.qmd
posts/django-allauth-resend/: 20241223.html  20241223.qmd  index.html
posts/effective-dataviz-polars-alta-ski-resort/: 20250210.html  20250210.qmd
posts/gt-marimo-in-quarto/: 20250612.html  20250612.qmd  mo_gt_in_quarto.py
posts/gt-row-selector/: 20250511.html  20250511.qmd
posts/marimo-django-deployment-checklist/: 20250625.html  20250625.qmd  mo_django_checklist.py
posts/marimo-gt-time-machine/: 20250626.html  20250626.qmd  mo_gt_time_machine.py
posts/marimo-gt-ui-reference/: 20250704.html  20250704.qmd  mo_gt_ui.py
posts/marimo-in-quarto/: 20250607.html  20250607.qmd  mo_in_quarto.py
posts/p9-polars-alta-ski-resort/: 20250412.html  20250412.qmd
posts/polars-custom-expr-namespace/: 20250417.html  20250417.qmd
posts/resend-via-marimo/: 20250625.html  20250625.qmd  mo_resend.py
posts/rust-notes-1/: 20260311.html  20260311.qmd
posts/rust-notes-2/: 20260509.html  20260509.qmd
posts/rust-notes-3/: 20260510.html  20260510.qmd
posts/rust-notes-4/: 20260531.html  (+1 more)
(+29 files in other folders)
