[project]
name = "jrycw_tech_blog"
dynamic = ["version"]
description = "Jerry Wu's Tech'n'take"
requires-python = ">=3.12"
authors = [{ name = "Jerry Wu", email = "jerry@ycwu.space"}]

dependencies = [
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pandas",
    "great_tables",
    "matplotlib",
    "highlight_text",
    "marimo",
    "jupyter",
]